[package]
name = "nannou-template"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nannou_web_compat"
path = "src/main.rs"

[lib]
name = "nannou_web_test"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
nannou = { version = "0.18.1", git = "https://github.com/nannou-org/nannou.git", rev = "287be8a4d075b17332ca0bf34649f5d25e751c00", features = [
    "wasm-experimental",
] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

# # These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.34"
futures = "0.3.27"
js-sys = "0.3.61"
